1 commit (создан начальный POM и написан HorseTest).